# CppPrimer_Clion

./: README.md
Basic/: CMakeLists.txt  Person.h  Sales_data.h  main.cpp
Chapter16/: Blob.cpp  Blob.h  CMakeLists.txt  Sales_data.h  main.cpp
Chapter17/: CMakeLists.txt  main.cpp
ForExercises/: CMakeLists.txt  DEBUG.h  Employee.cpp  Employee.h  MyDate.h  Person.h  Sales_data.cpp  Sales_data.h  Screen.h  StrBlob.cpp  StrBlob.h  Window_mgr.h  X.h  Y.h  main.cpp
ForExercises/Chapter12/: QueryResult.cpp  QueryResult.h  TextQuery.cpp  TextQuery.h
ForExercises/Chapter13/: BinStrTree.cpp  BinStrTree.h  Folder.cpp  Folder.h  Foo.cpp  Foo.h  HasPtrLikeClass.cpp  HasPtrLikeClass.h  HasPtrLikeValue.cpp  HasPtrLikeValue.h  Message.cpp  Message.h  QueryResult13.cpp  QueryResult13.h  StrVec.cpp  StrVec.h  TextQuery13.cpp  TextQuery13.h  TreeNode.cpp  TreeNode.h  ZString.cpp  ZString.h
ForExercises/Chapter14/: BoundStrCheck.cpp  BoundStrCheck.h  CompareStringLengthWithSize.cpp  CompareStringLengthWithSize.h  CompareTwoStrLength.cpp  CompareTwoStrLength.h
ForExercises/Chapter15/: Bulk_Quote.cpp  Bulk_Quote.h  Bulk_QuoteE15_26.cpp  Bulk_QuoteE15_26.h  Bulk_QuoteE15_27.cpp  Bulk_QuoteE15_27.h  Disc_Quote.cpp  Disc_Quote.h  Limit_Quote.cpp  Limit_Quote.h  Quote.cpp  Quote.h
ForExercises/Chapter15/Section9/: Basket.cpp  Basket.h
ForExercises/Data/: C09_39.txt  C10_33R.txt  C10_33WEven.txt  C10_33WOdd.txt  ChapterOfNovel.txt  FamilyNames.txt  NameAndBirthday.txt  PersonInfo.txt  ResultForPhoneNumbers.txt  SalesRecord.txt  SalesResult.txt  WritersAndBooks.txt  textRepeated.txt
ForTestAndTemp/: CMakeLists.txt  main.cpp
QueryText/: AndQuery.cpp  AndQuery.h  BinaryQuery.cpp  BinaryQuery.h  CMakeLists.txt  NotQuery.cpp  NotQuery.h  OrQuery.cpp  OrQuery.h  Query.cpp  Query.h  QueryResult.cpp  QueryResult.h  Query_base.cpp  Query_base.h  StrBlob.cpp  StrBlob.h  TextQuery.cpp  TextQuery.h  WordQuery.cpp  WordQuery.h  aTextForCpp.txt  main.cpp
